--- a/index.html
+++ b/index.html
@@ -765,15 +765,15 @@
               <ul class="contac-social-list">
 
                 <li>
-                  <a href="#" class="contact-social-link">
-                    <div class="tooltip">Facebook</div>
+                  <a href="https://github.com/NizarXD" class="contact-social-link">
+                    <div class="tooltip">github</div>
 
-                    <ion-icon name="logo-facebook"></ion-icon>
+                    <ion-icon name="logo-github"></ion-icon>
                   </a>
                 </li>
 
                 <li>
-                  <a href="#" class="contact-social-link">
+                  <a href="https://x.com/NizarNi66972604" class="contact-social-link">
                     <div class="tooltip">Twitter</div>
 
                     <ion-icon name="logo-twitter"></ion-icon>
@@ -781,7 +781,7 @@
                 </li>
 
                 <li>
-                  <a href="#" class="contact-social-link">
+                  <a href="https://www.linkedin.com/in/zarxd-delovoper-62a2202b7" class="contact-social-link">
                     <div class="tooltip">Linkedin</div>
 
                     <ion-icon name="logo-linkedin"></ion-icon>
@@ -789,10 +789,10 @@
                 </li>
 
                 <li>
-                  <a href="#" class="contact-social-link">
-                    <div class="tooltip">Youtube</div>
+                  <a href="https://www.instagram.com/zarxdmods" class="contact-social-link">
+                    <div class="tooltip">instagram</div>
 
-                    <ion-icon name="logo-youtube"></ion-icon>
+                    <ion-icon name="logo-instagram"></ion-icon>
                   </a>
                 </li>
 
